Archive2/81/ea03c5c1dd5e67/output
main.cpp: In function 'char* SumCharsAndDigits(const char*)':
main.cpp:8:5: error: expected ';' before '}' token
     }
     ^
main.cpp:9:18: error: invalid conversion from 'int' to 'char*' [-fpermissive]
     return count + 64
                  ^
main.cpp:10:1: error: expected ';' before '}' token
 }
 ^
main.cpp: In function 'int main(int, char**)':
main.cpp:13:24: error: invalid conversion from 'const char*' to 'char' [-fpermissive]
     const char input = "HELLO";
                        ^
main.cpp:14:40: error: invalid conversion from 'char' to 'const char*' [-fpermissive]
     printf("%d",SumCharsAndDigits(input));
                                        ^
main.cpp:14:41: warning: format '%d' expects argument of type 'int', but argument 2 has type 'char*' [-Wformat=]
     printf("%d",SumCharsAndDigits(input));
                                         ^
